--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularSrc</title>
+  <title>Stocknotes</title>
+  <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
