moved search to chart comp

--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Stocknotes</title>
   <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
+  <link rel="stylesheet" href="https://www.amcharts.com/lib/3/style.css">
+  <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,8 +13,10 @@
 </head>
 <body>
     <script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
+    <script src="https://www.amcharts.com/lib/3/serial.js"></script>
     <script src="https://www.amcharts.com/lib/3/amstock.js"></script>
     <script src="https://www.amcharts.com/lib/3/themes/black.js"></script>
+    <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
   <app-root></app-root>
 </body>
 </html>
