transformed stock data but no chart displays

--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -15,6 +15,8 @@
   <script src="https://www.amcharts.com/lib/3/amstock.js"></script>
   <script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
   <script src="https://www.amcharts.com/lib/3/themes/black.js"></script>
+  <script src="https://www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js"></script>
+  
   <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
   <link rel="stylesheet" src="styles.css" type="text/css" media="all" />
   <app-root></app-root>
