--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Stocknotes</title>
-  <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
-  <base href="/">
+  <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+  <base href="https://matthewramsey.github.io/stocknotes/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
